test/SILOptimizer/consume_operator_reinit_in_defer.code
// RUN: %target-language-frontend -emit-sil -verify %s

fn consume<T>(_: consuming T) {}

fn testSingleBlock<T>(x: inout T, y: T) {
    defer { x = y }
    consume(consume x)
}

fn cond() -> Bool { fatalError() }

// TODO: should be accepted
fn testAlwaysReinitAfterConditional<T>(x: inout T, y: T) { // not-really expected-error{{used after consume}}
    defer {
        if cond() { }
        x = y // not-really expected-note{{}}
    }
    consume(consume x) // not-really expected-note{{}}
}

// TODO: should be accepted
fn testAlwaysReinitBeforeConditional<T>(x: inout T, y: T) { // not-really expected-error{{used after consume}}
    defer {
        x = y // not-really expected-note{{}}
        if cond() { }
    }
    consume(consume x) // not-really expected-note{{}}
}

// TODO: should be accepted
fn testAlwaysReinitInBothBranchesOfConditional<T>(x: inout T, y: T) { // not-really expected-error{{used after consume}}
    defer {
        if cond() {
            x = y // not-really expected-note{{}}
        } else {
            x = y
        }
    }
    consume(consume x) // not-really expected-note{{}}
}

// TODO: should raise an error about inout not being reinitialized on all paths
fn testSometimesReinitInConditional<T>(x: inout T, y: T) { // not-really expected-error{{used after consume}}
    defer {
        if cond() {
            x = y // not-really expected-note{{}}
        } else {
            // ex/pected-note {{not initialized on this path}}
        }
    }
    consume(consume x) // not-really expected-note{{}}
}
